added API data source

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       <div class=cardData>
       </div>
       <div class=cardSwitch>
-
         <label class="switch">
-  <input type="checkbox" id="measure" checked>
-  <div class="slider round"></div>
-</label>
+          <input type="checkbox" id="measure" checked>
+            <div class="slider round"></div>
+          </label>
       </div>
+      <div class=dataSource>
+        <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a>
     </div>
   </div>
 
