--- a/index.html
+++ b/index.html
@@ -12,26 +12,30 @@
     <div class=cardContent>
       <div class=cardHeader>
         <div class=cardTitle>
-          <h1>localWeather</h1>
+          localWeather
         </div>
         <div class=cardIcon>
         </div>
       </div>
+
       <div class=cardData>
+
       </div>
       <div class=cardSwitch>
+
         <label class="switch">
           <input type="checkbox" id="measure" checked>
             <div class="slider round"></div>
           </label>
       </div>
-      <div class=dataSource>
-        <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a>
-    </div>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="script.js"></script>
+  <div class=dataSource>
+    <a href="https://darksky.net/poweredby/">Powered by Dark Sky</a>
+</div>
 </body>
 
 </html>
