--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css" type="text/css">
+  <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons-wind.min.css" type="text/css">
+
+
 </header>
 
 <body>
   <div class=backgroundLayer>
     <div class=cardContent>
       <div class=cardHeader>
+
         <div class=cardTitle>
           localWeather
         </div>
